# DrouterLearn

./: .gitignore  .gitmodules  build.gradle  demo-debug.apk  gradle.properties  settings.gradle
app/: build.gradle  gradle.properties  proguard-android-optimize.txt  proguard-rules.pro
build_config/: base.gradle  common.gradle  public_config.gradle
common_iot_device/: .gitignore  README.md  build.gradle  gradle.properties
common_upgrade/: build.gradle
common_viot/: .gitignore  build.gradle  proguard-rules.pro
lib_commonjar/: build.gradle  gradle.properties
module_camera/: build.gradle  gradle.properties
module_common/: build.gradle  gradle.properties  proguard-rules.pro
module_ffmpeg_cmd/: CMakeLists.txt  build.gradle  gradle.properties
module_ffmpeg_codec/: CMakeLists.txt  build.gradle  gradle.properties
module_ffmpeg_codec/src/main/: AndroidManifest.xml  AndroidManifestApp.xml
module_ffmpeg_codec/src/main/cpp/: ffmpeg_demo.cpp
module_ffmpeg_codec/src/main/cpp/cppsrc/: Cut.cpp  Cut.hpp  HardEnDecoder.hpp  Merge.cpp  SoftEnDecoder.hpp  VideoJpg.cpp  VideoJpg.hpp  transcode.hpp  videoresample.hpp
module_ffmpeg_codec/src/main/java/com/viomi/ffmpeg/codec/: Constants.java  FFmpegCodecActivity.java  FFmpegCodecApplicaiton.java
module_ffmpeg_codec/src/main/java/com/viomi/ffmpeg/codec/utils/: VideoEditCallback.java  VideoEditUtils.java
module_ffmpeg_codec/src/main/java/com/viomi/ffmpeg/codec/videoedit/Audio/: ADAudioMediaPlayer.java  ADAudioTrackPlayer.java  ADOpenSLES.java  AudioPlayInterface.java
module_ffmpeg_codec/src/main/java/com/viomi/ffmpeg/codec/videoedit/Common/: ADAssetsManager.java  ByteUtil.java  DDlog.java  PathTool.java
module_ffmpeg_codec/src/main/java/com/viomi/ffmpeg/codec/videoedit/ffmpegnative/: FFmpegEdit.java
module_ffmpeg_codec/src/main/res/drawable/: camera_duration_bg.xml
module_ffmpeg_codec/src/main/res/layout/: activity_ffmpeg_codec.xml
module_miot/: build.gradle  gradle.properties  profileso7.json  proguard-rules.pro  (+1 more)
(+1191 files in other folders)
